tests/positive/declare.fc
// test: declare-test

void exit(int _);

int foo(int arg);

void main(){
    exit(foo(2));
}

int foo(int arg){
    return arg * 0;
}