tests/negative/call_more_args.fc
// test: call-with-more-number-of-arguments-test
// compile-fail: true

int write(int _);
void exit(int _);

int foo(int a, int b){
    return a * b;
}

void main(){
    int res = foo(10, 1, 3);
    write(res);
    exit(0);
}